# gitforum

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  release.toml
.forum/: actors.toml  policy.toml
.forum/templates/: dec.md  rfc.md  task.md
doc/: MANUAL.md  ROADMAP.md  TODO.md
doc/adr/: 001-git-oid-canonical-ids.md  002-kind-reduction.md  003-topic-handle-scheme.md  003-workflow-handle-scheme.md  004-migration-strategy.md  005-cross-clone-conflict-resolution.md  006-node-type-reduction.md  008-fix-index-defense-in-depth.md  009-stale-reference-cleanup-separate-from-purge.md  010-stored-domain-event-split.md  (+1 more)
doc/man/: git-forum.1
docs/: TODO.md
scripts/: check-release-tag.sh  fix-index-blobs.sh
src/: main.rs
tests/: brief_test.rs  cli_branch_scope_test.rs  cli_bulk_node_test.rs  cli_canonical_equiv_test.rs  cli_clone_test.rs  cli_diff_test.rs  cli_doctor_publish_test.rs  cli_edit_test.rs  cli_error_hint_test.rs  cli_init_warning_test.rs  cli_ls_columns_test.rs  cli_ls_corrupt_test.rs  cli_manual_test.rs  cli_node_show_perf_test.rs  cli_push_test.rs  cli_read_fallback_test.rs  cli_regression_test.rs  cli_revise_test.rs  cli_set_visibility_test.rs  cli_shorthand_test.rs  cli_state_bulk_test.rs  cli_supersede_test.rs  cli_thread_new_test.rs  cli_vocabulary_audit_test.rs  contamination_audit_test.rs  doctor_test.rs  e2e_live_agent_test.rs  e2e_multiagent_test.rs  event_storage_test.rs  evidence_test.rs  github_test.rs  hook_test.rs  id_alloc_test.rs  index_test.rs  init_test.rs  legacy_gate_test.rs  ls_test.rs  m1_test.rs  m2_test.rs  m3_test.rs  (+22 more)
(+149 files in other folders)
