[package]
name = "git-forum"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
pulldown-cmark = { version = "0.13.1", default-features = false }
tempfile = "3"
sha2 = "0.10"

[dev-dependencies]
